--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
     <style type="text/css">
 
-      /* Large desktop */
+      /* Large desktop */ 
       @media (min-width: 980px) {
         body {
           padding-top: 60px;
       }
         .linediv-l {
-          border-right: 1px white solid;
+          border-bottom: 1px white solid;
       }
         .linediv-r {
-          border-left: 1px white solid;
+          border-top: 1px white solid;
       }
-     }
+     } 
 
       /* Landscape phones and down */
       @media (max-width: 480px) {
@@ -59,7 +59,7 @@
          line-height: 24px;
       }
 
-      /* Video pitch and Action */
+      /* Video pitch, Action and Rewards */
         .pitch {
           padding: 2.5% 0%;
       }
@@ -70,7 +70,11 @@
           background-color: #343434;
           padding: 3% 0%;
       }
-        .video, .thermometer, .order, .social, .statistics {
+        .rewards {
+          background-color: #aaaaaa;
+          padding: 3% 0%; 
+      }
+        .video, .thermometer, .prizes, .order, .social, .statistics {
           text-align: center;
       }
         .statistics h3, .statistics p {
@@ -85,6 +89,7 @@
       }
       .asset {
         padding: 2.5% 0%;
+        text-align: center;
       }
       .footer {
         color: #cccccc;
@@ -97,7 +102,28 @@
         color: #ccccff;
       }
 
-    </style>
+       /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */      
+ div.addthis_toolbox {
+  width:180px;
+  margin: 0 auto;
+ }
+
+   </style>
+
+    <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-42987447-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
   </head>
   <body>
   <div class="navbar navbar-inverse navbar-fixed-top">    
@@ -131,30 +157,70 @@
 	    <p class="lead">Take the things you love online offline with unpinned, an online community to learn, do , and share DIY projects over video chat.</p>
 	    </div>
 	  </div>
+	</div>
+      
+      <div class="container-fluid">
 	<div class="row-fluid pitch">
-	  <div class="span5 offset1 video">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <div class="span7 offset1">
+	    <div class="video">
+	    <img class="img-polaroid" src="http://placehold.it/600x400">
+	    </div>
+	   <div class="copy">
+	     <div class="span10 offset1">
+	    <p>
+	      CHANGETHIS Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyda\
+y life,  make and do things that bring you and others happiness, and share those experiences with others.
+
+Life isn't just about perusing the internet, admiring pretty pictures - it should be about bringing those things you love off the screen and into real life so you can enjoy them a\
+ll the time.  Plus, sharing in the enjoyment of doing this with new and old friends.  Thats what you can do on Unpinned.
+
+Create and share the DIY projects that you've been admiring from afar.  Teach others how to make something you've been mastering for years or learn something new from some else. W\
+hatever it is, get unpinned!
+              </p>
+	    </div>
+	    </div>
+	   <div class="asset">
+            <img class="img-polaroid" src="http://placehold.it/600x400">
 	    </div>
 
-	  <div class="span5 actions">
+          <div class="copy">
+            <div class="span10 offset1">
+	    <p>
+Making things with your friends or new acquaintances over video chat is easy and quick, no software installation necessary.  Find people on the other side of the world or just aro\
+und the corner that you can learn, do, and share with.
+
+The goal is to launch the site in thirty days, starting with at least 100 users.  After extensive research, we believe the majority of the work can be done ourselves to get launch\
+ ready.  Past that we will need an additional developer to help with final testing and production which is where the $1,000 comes in.
+
+Tell your friends and their  friends' friends!  Lets make this happen!
+              </p>
+	    </div>
+	    </div>
+	    <div class="asset">
+	      <img class="img-polaroid" src="http://placehold.it/600x400">
+	      </div>
+	  </div>
+
+
+	  <div class="span3 actions">
 	    <div class="span12">
 	      <div class="statistics">
-		<div class="span3">
+		<div class="span10 offset1">
 		  <div class="linediv-l">
 		  <h3>0</h3> <p>backers</p>
 		  </div>
 		 </div>
-		<div class="span3">
+		<div class="span10 offset1">
 		  <div class="linediv-l">
 		    <h3>$0</h3> <p>of $1,000</p>
 		    </div>
 		  </div>
-		<div class="span3">
+		<div class="span10 offset1">
 		  <div class="lindediv-c">
 		    <h3>0</h3> <p>of 100 sign ups</p>
 		    </div>
 		  </div>
-		<div class="span3">
+		<div class="span10 offset1">
 		  <div class="linediv-r">
 		  <h3>30</h3> <p>days left</p>
 		  </div>
@@ -171,41 +237,86 @@
 	    <div class="span6 offset3 order">
 	      <button class="btn btn-success btn-large">Pledge</button>
 	      </div>
-	    <div class="span8 offset2 social">
-	      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-	      <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+	    <div class="span12 social">
+	      <!-- AddThis Button BEGIN -->
+	      <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+		<a class="addthis_button_preferred_1"></a>
+		<a class="addthis_button_preferred_2"></a>
+		<a class="addthis_button_preferred_3"></a>
+		<a class="addthis_button_preferred_4"></a>
+		<a class="addthis_button_compact"></a>
+		<a class="addthis_counter addthis_bubble_style"></a>
 	      </div>
-	    </div>
-	  </div>
-	<div class="row-fluid section1">
-	  <div class="span5 offset1 asset">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
-	    </div>
-	  <div class="span5 copy">
-	    <p>
-	  Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyday life,  doing and making things that bring you and others happiness, and sharing those experiences with others.  
+	      <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+	      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5200a667119977b7"></script>
+	      <!-- AddThis Button END -->
 
-Life isn't just about perusing the internet, admiring pretty pictures - it should be about bringing those things you love off the screen and into real life so you can enjoy them all the time.  Plus, sharing in the enjoyment of doing this with new and old friends.  Thats what you can do on Unpinned.
+	      </div>
 
-Create and share the DIY projects that you've been admiring from afar.  Teach others how to make something you've been mastering for years or learn something new from some else. Whatever it is, get unpinned! 
-	      </p>
-	    </div>
 	  </div>
 
-	<div class="row-fluid section2">
-	  <div class="span5 offset1 copy copy-right">
-	    <p>
-Making things with your friends or new acquaintances over video chat is easy and quick, no software installation necessary.  Find people on the other side of the world or just around the corner that you can learn, do, and share with.
+	  <div class="span3 rewards">
+	    <div class="span12">
+	      <div class="prizes">
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $1 or more</h4>
+		    <p>We'll thank you by name on our website</p>  
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge a Social Plug</h4>
+		    <p>We give you a personal shout-out on our social networks</p>
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge a Sign-Up</h4>
+		    <p>Be one of the first 100 to sign up and you'll be invited to the first 1,000 User Party</p>
+		    </div>   
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4> Pledge $5 or more</h4>
+		    <p> Reward</p>
+		    </div>
+		    </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $10 or more</h4>
+		    <p>Reward xyz</p>
+		  </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $15 or more</h4>
+		    <p>Reward</p>
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $25 or more</h4>
+		    <p>A featured blog post on how wonderful you are</p>
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $50 or more</h4>
+		    <p>We'll make and mail you a personalized, handmade gift</p> 
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $100 or more</h4>
+		    <p>We'll name something on the site after you</p>
+		    </div>
+		  </div>
+		
+		</div>
+	      </div>
+	   </div> 
 
-The goal is to launch the site in thirty days, starting with at least 100 users.  After extensive research, we believe the majority of the work can be done ourselves to get launch ready.  Past that we will need an additional developer to help with final testing and production which is where the $1,000 comes in.
-
-Tell your friends and their  friends' friends!  Lets make this happen!     
-	      </p>
-	    </div>
-	  <div class="span5 asset">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
-	    </div>
-	  </div>
 
 
 	<div class="row-fluid faq">
@@ -252,6 +363,17 @@ Tell your friends and their  friends' friends!  Lets make this happen!
 	    </div>
 	  </div>
 
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-42987447-1', 'herokuapp.com');
+  ga('send', 'pageview');
+
+</script>
 
       </body>
   </html>
