--- a/test.html
+++ b/test.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Unpinned</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Roboto|Oxygen' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
@@ -19,10 +20,10 @@
           padding-top: 60px;
       }
         .linediv-l {
-          border-right: 1px white solid;
+          border-bottom: 1px white solid;
       }
         .linediv-r {
-          border-left: 1px white solid;
+          border-top: 1px white solid;
       }
      }
 
@@ -39,14 +40,45 @@
       }
      }
 
+      .navbar-inner, .navbar .btn-navbar {
+      background: #006e2e; /* Old browsers */
+background: -moz-linear-gradient(top, #006e2e 0%, #006e2e 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#006e2e), color-stop(100%,#006e2e)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, #006e2e 0%,#006e2e 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, #006e2e 0%,#006e2e 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, #006e2e 0%,#006e2e 100%); /* IE10+ */
+background: linear-gradient(to bottom, #006e2e 0%,#006e2e 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', endColorstr='#006e2e',GradientType=0 ); /* IE6-9 */
+      }
+
+      .navbar .nav .active > a, .navbar .nav .active > a:hover {
+         background-color: #006633;
+      }
+      
+      .navbar .nav > li > a {
+         color: #669966;
+         text-decoration: none;
+         text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+      }
+
+      .navbar-fixed-top .brand {
+        color: #F0F0F0;
+        text-decoration: none;
+        text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+      }
+
+      .navbar .nav > li > a:hover {color:white;}
+
+      .navbar .nav .active > a, .navbar .nav .active > a:hover {color:white;}
+
       /* All form factors */
 
       /* Main body and headings */
         body{
-         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+         font-family: 'Roboto', sans-serif;
       }
       .heading, .subheading {
-         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+         font-family: 'Oxygen', sans-serif;
           text-align: center;
       }
       p.lead {
@@ -59,7 +91,7 @@
          line-height: 24px;
       }
 
-      /* Video pitch and Action */
+      /* Video pitch, Action and Rewards */
         .pitch {
           padding: 2.5% 0%;
       }
@@ -67,14 +99,23 @@
           padding: 2% 0%;
       }
         .actions {
-          background-color: #343434;
+          background-color: #404040;
           padding: 3% 0%;
       }
-        .video, .thermometer, .order, .social, .statistics {
+        .rewards {
+          background-color: #aaaaaa;
+          padding: 3% 0%; 
+      }
+        .video, .thermometer, .prizes, .order, .social, .statistics {
           text-align: center;
       }
-        .statistics h3, .statistics p {
+        .statistics h4, .statistics p {
           color: white;
+      }
+
+        .heading h1 {
+          color: #006e2e;
+          font-size: 50px;
       }
 
       /* Marketing Copy and Footer */
@@ -85,6 +126,7 @@
       }
       .asset {
         padding: 2.5% 0%;
+        text-align: center;
       }
       .footer {
         color: #cccccc;
@@ -100,7 +142,7 @@
     </style>
   </head>
   <body>
-  <div class="navbar navbar-inverse navbar-fixed-top">    
+  <div class="navbar navbar-fixed-top">    
    <div class="navbar-inner">
     <div class="container">
          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -115,6 +157,24 @@
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
+	    <ul class="nav pull-right">
+	      <li class="dropdown">
+		<a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In</a>
+		<div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
+		  <form action="[YOUR ACTION]" method="post" accept-charset="UTF-8">
+  <input id="user_username" style="margin-bottom: 15px;" type="text" name="user[username]" size="30" placeholder="Username"/>
+  <input id="user_password" style="margin-bottom: 15px;" type="password" name="user[password]" size="30" placeholder="Password"/>
+  <span class="help-block"><a href="#" class="text-error"><small>Forgot Password?</small></a></span>
+  <input id="user_remember_me" style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" value="1" />
+  <label class="string optional" for="user_remember_me"> Remember me</label>
+
+  <input class="btn btn-primary" style="clear: left; width: 100%; height: 32px; font-size: 13px;" type="submit" name="commit" value="Sign In" />
+  <a href="_account.html">Create an Account</a>
+</form>
+                </li>
+                </ul> 
+
+
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -123,89 +183,118 @@
       <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>$1,000 + 100 sign ups = Unpinned Launch!</h1>
+	  <h1>Welcome to Unpinned!</h1>
 	  </div>
 	</div>
 	<div class="row-fluid subheading">
 	  <div class="span12">
-	    <p class="lead">Take the things you love online offline with unpinned, an online community to learn, do , and share DIY projects over video chat.</p>
+	    <p class="lead">An online community to learn, do and share DIY projects over vc.</p>
 	    </div>
 	  </div>
+	</div>
+      
+      <div class="container-fluid">
 	<div class="row-fluid pitch">
-	  <div class="span5 offset1 video">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <div class="span7 offset1">
+	    <div class="video">
+	    <img class="img-polaroid" src="http://placehold.it/600x400">
 	    </div>
 
-	  <div class="span5 actions">
+	   <div class="asset">
+            <img class="img-polaroid" src="http://placehold.it/600x200">
+	    </div>
+
+	    <div class="asset">
+	      <img class="img-polaroid" src="http://placehold.it/600x200">
+	      </div>
+	  </div>
+
+
+	  <div class="span3 actions">
 	    <div class="span12">
 	      <div class="statistics">
-		<div class="span3">
-		  <div class="linediv-l">
-		  <h3>0</h3> <p>backers</p>
-		  </div>
+		<div class="span10 offset1">
+		  <h4>Create a how-to-torial!</h4>
+		  <button class="btn btn-success btn-large">Create</button>
 		 </div>
-		<div class="span3">
-		  <div class="linediv-l">
-		    <h3>$0</h3> <p>of $1,000</p>
-		    </div>
-		  </div>
-		<div class="span3">
-		  <div class="lindediv-c">
-		    <h3>0</h3> <p>of 100 sign ups</p>
-		    </div>
-		  </div>
-		<div class="span3">
-		  <div class="linediv-r">
-		  <h3>30</h3> <p>days left</p>
-		  </div>
-		 </div> 
+		 <div class="span10 offset1">
+                    <h4>Request a DIY Project</h4>
+                    <button class="btn btn-success btn-large">Request</button>
+                    </div>
+		  <div class="span10 offset1">
+                    <h4>Invite Friends</h4>
+                    </div>
+		  <div class="span12 social">
+              <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+              <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+              </div>
 		</div>
 	      </div>
 
-	  <div class="span10 offset1"> 
-	    <div class="thermometer progress active">
-	      <div class="bar bar-success" style="width: 60%;"></div>
-	      <div class="bar bar-warning" style="width: 40%;"></div>
-	      </div>
-	    </div>
-	    <div class="span6 offset3 order">
-	      <button class="btn btn-success btn-large">Pledge</button>
-	      </div>
-	    <div class="span8 offset2 social">
-	      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-	      <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-	      </div>
-	    </div>
-	  </div>
-	<div class="row-fluid section1">
-	  <div class="span5 offset1 asset">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
-	    </div>
-	  <div class="span5 copy">
-	    <p>
-	  Unpinned is the realization of my longtime dream to start a business.  It also reflects my personal philosophy on how life should be, which is to find the fun in everyday life,  doing and making things that bring you and others happiness, and sharing those experiences with others.  
-
-Life isn't just about perusing the internet, admiring pretty pictures - it should be about bringing those things you love off the screen and into real life so you can enjoy them all the time.  Plus, sharing in the enjoyment of doing this with new and old friends.  Thats what you can do on Unpinned.
-
-Create and share the DIY projects that you've been admiring from afar.  Teach others how to make something you've been mastering for years or learn something new from some else. Whatever it is, get unpinned! 
-	      </p>
-	    </div>
 	  </div>
 
-	<div class="row-fluid section2">
-	  <div class="span5 offset1 copy copy-right">
-	    <p>
-Making things with your friends or new acquaintances over video chat is easy and quick, no software installation necessary.  Find people on the other side of the world or just around the corner that you can learn, do, and share with.
+	  <div class="span3 rewards">
+	    <div class="span12">
+	      <div class="prizes">
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $1 or more</h4>
+		    <p>We'll thank you by name on our website</p>  
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge a Social Plug</h4>
+		    <p>We give you a personal shout-out on our social networks</p>
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge a Sign-Up</h4>
+		    <p>Be one of the first 100 to sign up and you'll be invited to the first 1,000 User Party</p>
+		    </div>   
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4> Pledge $5 or more</h4>
+		    <p> Reward</p>
+		    </div>
+		    </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $10 or more</h4>
+		    <p>Reward xyz</p>
+		  </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $15 or more</h4>
+		    <p>Reward</p>
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $25 or more</h4>
+		    <p>A featured blog post on how wonderful you are</p>
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $50 or more</h4>
+		    <p>We'll make and mail you a personalized, handmade gift</p> 
+		    </div>
+		  </div>
+		<div class="span10 offset1">
+		  <div class="linediv-l">
+		    <h4>Pledge $100 or more</h4>
+		    <p>We'll name something on the site after you</p>
+		    </div>
+		  </div>
+		
+		</div>
+	      </div>
+	   </div> 
 
-The goal is to launch the site in thirty days, starting with at least 100 users.  After extensive research, we believe the majority of the work can be done ourselves to get launch ready.  Past that we will need an additional developer to help with final testing and production which is where the $1,000 comes in.
-
-Tell your friends and their  friends' friends!  Lets make this happen!     
-	      </p>
-	    </div>
-	  <div class="span5 asset">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
-	    </div>
-	  </div>
 
 
 	<div class="row-fluid faq">
